[package]
name = "osier-cli"
version = "0.1.0"
authors = ["Xie Zhongtao <xie_zhongtao@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }